# pv-prediction

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yaml  main.yaml
src/pv_prediction/common/: config.py  logging_config.py
src/pv_prediction/data/: db_session_manger.py  fronius_connector.py
src/pv_prediction/data/converter/: fronius_connector.py
src/pv_prediction/data/meteomatics/: api_client.py  schemata.py
src/pv_prediction/model/: inferencing_runner.py  pv_pipeline.py
src/pv_prediction/model/custom_blocks/: select_subset.py
tests/pv_prediction/data/: test_db_session_manager.py  test_fronius_connector.py
tests/pv_prediction/data/converter/: test_fronius_connector.py
tests/pv_prediction/data/meteomatics/: test_api_client.py  test_schemata.py
tests/pv_prediction/model/: test_inferencing_runner.py  test_pv_pipeline.py
tests/pv_prediction/model/custom_blocks/: test_select_subset.py
